Navbar touch-up

--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -8,5 +8,7 @@
   "contact": "联系方式",
   "studio-name": "一坨一坨",
   "studio-intro-1": "一坨一坨工作室是由一对来自北京的UCLA留学生情侣，因兴趣使然建立的独立游戏开发工作室。它目前由一名全栈美工，一名全栈程序，一只猫，一只狗，和两台电脑组成。我们是热爱游戏的玩家，试图在独立游戏的领域留下自己的足迹。",
-  "studio-intro-2": "一坨一坨工作室致力于开发故事丰富，剧情主导的角色扮演游戏，专注创造有新意的战斗模式和有意义的角色成长体验。"
+  "studio-intro-2": "一坨一坨工作室致力于开发故事丰富，剧情主导的角色扮演游戏，专注创造有新意的战斗模式和有意义的角色成长体验。",
+  "tech-stack": "一坨程序",
+  "art-stack": "一坨美术"
 }
