--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -2,11 +2,13 @@
   "languages": "languages",
   "title": "2StackStudio",
   "about": "About",
-  "studio": "The studio",
+  "studio": "The Studio",
   "zhenghao": "Zhenghao Li",
   "jiusi": "Jiusi Li",
   "contact": "Contact",
   "studio-name": "Studio",
   "studio-intro-1": "2StackStudio is a hobbyist independent game development studio, run by a couple of UCLA undergrads from Beijing, China. It currently consists of a full stack artist, a full stack developer, a cat, a dog, and two computers. We are game lovers trying to leave a footprint in indie game community.",
-  "studio-intro-2": "2StackStudio is focused on creating story rich, narrative driven RPGs with innovative combat and meaningful progression."
+  "studio-intro-2": "2StackStudio is focused on creating story rich, narrative driven RPGs with innovative combat and meaningful progression.",
+  "tech-stack": "the tech stack",
+  "art-stack": "the art stack"
 }
