--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -10,5 +10,8 @@
   "studio-intro-1": "2StackStudio is a hobbyist independent game development studio, run by a couple of UCLA undergrads from Beijing, China. It currently consists of a full stack artist, a full stack developer, a cat, a dog, and two computers. We are game lovers trying to leave a footprint in indie game community.",
   "studio-intro-2": "2StackStudio is focused on creating story rich, narrative driven RPGs with innovative combat and meaningful progression.",
   "tech-stack": "the tech stack",
-  "art-stack": "the art stack"
+  "art-stack": "the art stack",
+  "project": "Project",
+  "tom": "Throne of Mortals",
+  "project-tower": "Project Tower"
 }
