--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -15,7 +15,7 @@
   "tech-stack": "一坨程序",
   "art-stack": "一坨美术",
   "project": "游戏项目",
-  "tom": "尘巅",
+  "tom": "《尘巅》",
   "project-tower": "宝塔项目",
   "learn-more": "了解更多"
 }
