--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -6,16 +6,38 @@
   "zhenghao": "李正浩",
   "jiusi": "李九思",
   "contact": "联系方式",
-  "studio-name": "一坨一坨",
-  "studio-intro": {
-    "l1": "一坨一坨工作室是由一对来自北京的UCLA留学生情侣，因兴趣使然建立的独立游戏开发工作室。它目前由一名全栈美工，一名全栈程序，一只猫，一只狗，和两台电脑组成。我们是热爱游戏的玩家，试图在独立游戏的领域留下自己的足迹。",
-    "l2": "一坨一坨工作室致力于开发故事丰富，剧情主导的角色扮演游戏，专注创造有新意的战斗模式和有意义的角色成长体验。"
-  },
-  "us": "我们",
   "tech-stack": "一坨程序",
   "art-stack": "一坨美术",
   "project": "游戏项目",
   "tom": "《尘巅》",
   "project-tower": "宝塔项目",
-  "learn-more": "了解更多"
+  "learn-more": "前往了解",
+  "index-page": {
+    "studio": {
+      "caption": "一坨一坨工作室",
+      "body": {
+        "l1": "来认识一下一坨一坨工作室的两坨开发者。",
+        "l2": "了解我们的故事，我们的工作，和我们的未来。"
+      }
+    },
+    "project": {
+      "caption": "《尘巅》",
+      "body": {
+        "l1": "与我们共同见证《尘巅》的成长过程。",
+        "l2": "了解游戏的玩法，故事背景，和我们的开发成果。"
+      }
+    }
+  },
+  "about-page": {
+    "studio": {
+      "caption": "一坨一坨",
+      "body": {
+        "l1": "一坨一坨工作室是由一对来自北京的UCLA留学生情侣，因兴趣使然建立的独立游戏开发工作室。它目前由一名全栈美工，一名全栈程序，一只猫，一只狗，和两台电脑组成。我们是热爱游戏的玩家，试图在独立游戏的领域留下自己的足迹。",
+        "l2": "一坨一坨工作室致力于开发故事丰富，剧情主导的角色扮演游戏，专注创造有新意的战斗模式和有意义的角色成长体验。"
+      }
+    },
+    "us": {
+      "caption": "我们"
+    }
+  }
 }
