--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -39,5 +39,27 @@
     "us": {
       "caption": "我们"
     }
+  },
+  "project-page": {
+    "project-tower": {
+      "banner": {
+        "l1": "宝塔项目",
+        "l2": "《尘巅》初稿可玩小样"
+      },
+      "card": {
+        "caption": "卡牌战斗",
+        "body": {
+          "l1": "同时控制多位主角，在紧张的即时策略战斗中运筹帷幄，斩妖除魔。",
+          "l2": "了解每位身怀独门绝技的角色，掌握各自独特的战斗机制和资源控制。"
+        }
+      },
+      "minion": {
+        "caption": "召唤随从",
+        "body": {
+          "l1": "制造机关偃甲保护自己，或是召唤神秘灵兽迎战杀敌。",
+          "l2": "冲锋，嘲讽，偷袭，固守。每种随从都有独特的职责和行为，在战斗中助以一臂之力。"
+        }
+      }
+    }
   }
 }
