--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -59,6 +59,20 @@
           "l1": "制造机关偃甲保护自己，或是召唤神秘灵兽迎战杀敌。",
           "l2": "冲锋，嘲讽，偷袭，固守。每种随从都有独特的职责和行为，在战斗中助以一臂之力。"
         }
+      },
+      "spell": {
+        "caption": "施放法术",
+        "body": {
+          "l1": "掌握每个角色的战斗特点，巧妙控制资源，应用强大而独特的法术扭转局势",
+          "l2": "施展奇门偃术或道家妙法，造成伤害，施加五行效果，控制敌人行动，或是治疗伤者。"
+        }
+      },
+      "boss": {
+        "caption": "对抗强敌",
+        "body": {
+          "l1": "从山珍异兽，魑魅魍魉，到氏族血仇，邪修掌门。战胜在旅途中遇到的各具特色的敌方势力。",
+          "l2": "在首领战中面对敌人强大的进攻，保护队友，在实战中观察弱点，总结经验，掌握机制来扭转局势。"
+        }
       }
     }
   }
