--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -46,6 +46,13 @@
         "l1": "宝塔项目",
         "l2": "《尘巅》初稿可玩小样"
       },
+      "download": {
+        "caption": "下载试玩",
+        "body": {
+          "l1": "下载桌面版以便获得最佳体验",
+          "l2": "为了方便试玩，也可直接游玩网页版，但体验将受到限制"
+        }
+      },
       "card": {
         "caption": "卡牌战斗",
         "body": {
