Profile layout completed

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -6,8 +6,8 @@
   "zhenghao": "Zhenghao Li",
   "jiusi": "Jiusi Li",
   "contact": "Contact",
-  "tech-stack": "the tech stack",
-  "art-stack": "the art stack",
+  "tech-stack": "The tech stack",
+  "art-stack": "The art stack",
   "project": "Project",
   "tom": "Throne of Mortals",
   "project-tower": "Project Tower",
