--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -3,8 +3,8 @@
   "title": "一坨一坨工作室",
   "about": "关于我们",
   "studio": "工作室",
-  "zhenghao": "李正浩",
-  "jiusi": "李九思",
+  "zhenghao": "雪莲",
+  "jiusi": "九四",
   "contact": "联系方式",
   "tech-stack": "一坨程序",
   "art-stack": "一坨美术",
