--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -97,7 +97,7 @@
         }
       },
       "boss": {
-        "caption": "Powerful foes",
+        "caption": "Powerful Foes",
         "body": {
           "l1": "Fight against a wide range of enemies from powerful mythical monsters to vicious cult leaders, each with different movements and attacks.",
           "l2": "Immerse in intense boss fights and defend yourself through multiple phases, learn their weaknesses and mechanics to turn the tide."
