--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -37,7 +37,9 @@
       }
     },
     "us": {
-      "caption": "我们"
+      "caption": "我们",
+      "zhenghao": "Zhenghao text",
+      "jiusi": "九四是一名UCLA艺术史专业的在校生，即将成为Academy of Art University的研究生学习3D建模和动画。"
     },
     "zhenghao": {
       "left": {
@@ -71,9 +73,10 @@
       "download": {
         "caption": "下载试玩",
         "body": {
-          "l1": "下载桌面版以便获得最佳体验",
-          "l2": "为了方便试玩，也可直接游玩网页版，但体验将受到限制"
-        }
+          "l1": "下载PC版以便获得最佳体验",
+          "l2": "为了方便试玩，您也可以直接游玩网页版，但画面效果将受到限制。游戏文件约150MB，所以根据您的网络情况，可能会有短暂的加载时间。"
+        },
+        "button": "在浏览器中运行网页版"
       },
       "card": {
         "caption": "卡牌战斗",
