--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -32,20 +32,20 @@
     "studio": {
       "caption": "一坨一坨",
       "body": {
-        "l1": "一坨一坨工作室是由一对来自北京的UCLA留学生情侣，因兴趣使然建立的独立游戏开发工作室。它目前由一名全栈美工，一名全栈程序，一只猫，一只狗，和两台电脑组成。我们是热爱游戏的玩家，试图在独立游戏的领域留下自己的足迹。",
-        "l2": "一坨一坨工作室致力于开发故事丰富，剧情主导的角色扮演游戏，专注创造有新意的战斗模式和有意义的角色成长体验。"
+        "l1": "一坨一坨工作室是由一对来自北京现居湾区的UCLA留学生情侣，因兴趣使然建立的独立游戏开发工作室。它目前由一名全栈美工，一名全栈程序，一只猫，一只狗，和两台电脑组成。我们是热爱游戏的玩家，试图在独立游戏的领域留下自己的足迹。",
+        "l2": "一坨一坨工作室致力于开发故事丰富，剧情主导的角色扮演游戏，专注创造有新意的游戏模式和有意义的角色成长体验。"
       }
     },
     "us": {
       "caption": "我们",
-      "zhenghao": "雪莲是UCLA计算机专业的应届毕业生，正在努力上岸成为一名真正的全职码农。",
-      "jiusi": "九四是一名UCLA艺术史专业的在校生，即将在Academy of Art开始3D建模和动画的研究生学习。"
+      "zhenghao": "雪莲是来自AcuityMD的全栈软件工程师。",
+      "jiusi": "九四是一名旧金山艺术大学在读MFA学生，专攻动画和视觉特效。"
     },
     "zhenghao": {
       "left": {
         "caption": "个人",
         "body": {
-          "l1": "雪莲是UCLA计算机专业的应届毕业生，正在努力上岸成为一名真正的全职码农。",
+          "l1": "雪莲是来自AcuityMD的全栈软件工程师。",
           "l2": "雪莲热爱游戏开发，致力于将传统中国传说与文化融入现代电子游戏，创造一个正宗而独特的国风奇幻世界。"
         }
       },
@@ -63,8 +63,7 @@
       "right": {
         "caption": "经历",
         "body": {
-          "l1": "在业余游戏开发之外，雪莲正在投递全职软件工程师岗位，侧重全栈或后端开发。",
-          "l2": "雪莲在以往的个人项目和实习中有Spring Boot REST后端开发以及基于Next.js和Nest.js的React + Node全栈网络应用开发的相关经验。"
+          "l1": "在业余游戏开发之外，雪莲也拥有TypeScript和React相关的开发经验。"
         }
       }
     }
@@ -118,8 +117,8 @@
     "body": {
       "l1": "twostackstudio@outlook.com",
       "l2": "(206) 369-7158",
-      "l3": "1929 Beloit Ave",
-      "l4": "Los Angeles, CA 90025"
+      "l3": "333 El Camino Real",
+      "l4": "San Carlos, CA 94070"
     },
     "form": {
       "required": "必填",
