--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -32,7 +32,7 @@
     "studio": {
       "caption": "一坨一坨",
       "body": {
-        "l1": "一坨一坨工作室是由一对来自北京现居湾区的UCLA留学生情侣，因兴趣使然建立的独立游戏开发工作室。它目前由一名全栈美工，一名全栈程序，一只猫，一只狗，和两台电脑组成。我们是热爱游戏的玩家，试图在独立游戏的领域留下自己的足迹。",
+        "l1": "一坨一坨工作室是由一对来自北京现居湾区的UCLA留学生情侣，因兴趣使然建立的独立游戏开发工作室。它目前由一名全栈美工，一名全栈程序，一只狗，和两台电脑组成。我们是热爱游戏的玩家，试图在独立游戏的领域留下自己的足迹。",
         "l2": "一坨一坨工作室致力于开发故事丰富，剧情主导的角色扮演游戏，专注创造有新意的游戏模式和有意义的角色成长体验。"
       }
     },
@@ -63,7 +63,7 @@
       "right": {
         "caption": "经历",
         "body": {
-          "l1": "在业余游戏开发之外，雪莲也拥有TypeScript和React相关的开发经验。"
+          "l1": "在业余游戏开发之外，雪莲也拥有TypeScript，React，Node相关的开发经验。"
         }
       }
     }
